--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
   <build>
     <finalName>DynamicForm</finalName>
     <plugins>
+	    <plugin>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-war-plugin</artifactId>
+		    <version>3.4.0</version>  <!-- Updated version -->
+		</plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -91,7 +97,7 @@
       <plugin>
         <groupId>org.apache.tomcat.maven</groupId>
         <artifactId>tomcat7-maven-plugin</artifactId>
-        <version>2.2</version>
+        <version>3.4.0</version>
         <configuration>
           <port>8080</port>
           <path>/</path>
